--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1 id="title_h1">3rd force</h1>
+    <h1 id="title_h1">dashboard</h1>
     <table id="memo_table" class="memo_table">
     </table>
     <script>
