--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <h1 id="title_h1">dashboard</h1>
+    <h1 id="title_h1">dashboard app</h1>
+    <input id="add_memo_button" type="button" value="ボタン">
     <table id="memo_table" class="memo_table">
     </table>
     <script>
